# apps/api/test/__snapshots__/openapi.json
@@ -5588,6 +5588,47 @@
         ]
       }
     },
+    "/api/v1/properties/{propertyId}/room-qr-codes/sheet": {
+      "post": {
+        "operationId": "RoomQrController_sheet",
+        "parameters": [
+          {
+            "name": "propertyId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "X-Correlation-Id",
+            "in": "header",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/QrSheetDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "RoomQr"
+        ]
+      }
+    },
     "/api/v1/properties/{propertyId}/rooms/{roomId}/qr-code": {
       "post": {
         "operationId": "RoomQrController_generate",
@@ -8966,6 +9007,21 @@
         "required": [
           "reason"
         ]
+      },
+      "QrSheetDto": {
+        "type": "object",
+        "properties": {
+          "roomIds": {
+            "minItems": 1,
+            "maxItems": 2000,
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "uuid",
+              "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
+            }
+          }
+        }
       },
       "ReplyDto": {
         "type": "object",
